---
title: Toothbrush timer
config:
  layout: dagre
---
stateDiagram-v2
    %direction LR
    classDef success fill:#0f0,font-weight:bold,stroke-width:2px,stroke:green
    classDef fail fill:#f00,font-weight:bold,stroke-width:2px,stroke:red

    [*] --> Sleep
    Sleep --> Idle : Motion = any

    Idle --> Sleep : IdleTime > MaxIdle && BrushingTime < Started
    Idle --> Failed:::fail : IdleTime > MaxIdle && BrushingTime > Started
    Failed --> Sleep : FailWaitTime

    Done:::success --> Sleep : DoneWaitTime

    Idle --> Brushing : Motion = Brushing
    Brushing --> Idle : Motion != Brushing
    Brushing --> Done : BrushingTime >= Target

